--- a/src/components/Topic/Topic.css
+++ b/src/components/Topic/Topic.css
@@ -2,4 +2,5 @@
   border: 1px solid black;
   width: 15%;
   margin: 0 2%;
+  overflow: hidden;
 }
