--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,9 @@ html, body, #root {
   height: 100%;
   background-color: #FFFFFF;
   font-family: comfortaa;
+  background-image: radial-gradient(#e4e4ef 1px, transparent 1px), radial-gradient(#e4e4ef 1px, transparent 1px);
+  background-position: 0 0, 25px 25px;
+  background-size: 50px 50px;
 }
 
 html {
